<resources>
    <string name="app_name">Liemie</string>

    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="passwordHint">Password</string>
    <string name="login">Login</string>
    <string name="id">Login</string>
    <string name="cancel">Cancel</string>

    <string name="menu_login">Login</string>
    <string name="menu_list">List</string>
    <string name="menu_import">Import</string>
    <string name="menu_export">Export</string>
    <string name="menu_info">Informations</string>

    <string name="main_disconnect">Disconnect</string>
    <string name="main_disconnectMessage">Do you really want to disconnect?</string>

    <string name="error_entry">Entry error</string>
    <string name="error_permission">This permission is needed for the application</string>

    <string name="offline_message">In offline mode the application is limited</string>

    <string name="general_message">Message</string>

    <string name="import_import">Import</string>

    <string name="strOK">ok</string>
    <string name="strCANCEL">Cancel</string>
</resources>
