<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.liemie.MainActivity">
    <item
        android:id="@+id/menu_connect"
        android:icon="@drawable/connec"
        android:orderInCategory="100"
        android:title="@string/menu_login"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_list"
        android:icon="@drawable/list"
        android:title="@string/menu_list"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_import"
        android:icon="@drawable/importer"
        android:title="@string/menu_import"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_export"
        android:icon="@drawable/export"
        android:title="@string/menu_export"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_info"
        android:icon="@drawable/info"
        android:title="@string/menu_info"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />

</menu>
